--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "monsters",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://hicondron.github.io/monsters/",
+  "homepage": "git@github.com:hicondron/monsters.git",
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
